[tool.poetry]
name = "dlt-concepts"
version = "0.1.0"
description = "Delta live"
authors = ["Saroj.Dongol <sdongol@deloitte.com.au>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

